syntax = "proto3";

package msgstats;

import "google/protobuf/timestamp.proto";

option go_package = "gen/go/msgstats;msgstats";

service MsgStatsService {
  rpc GetStats (MsgStatsRequest) returns (MsgStatsResponse);
}

message MsgStatsRequest {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

message MsgStatsResponse {
  repeated string messages = 1;
}